--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # These are supported funding model platforms
-custom: https://www.buymeacoffee.com/Dk4z0CS
+custom: https://www.buymeacoffee.com/upgundecha
