--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,8 +9,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: markdown syntax
+    - name: markdown lit
       uses: nosborn/github-action-markdown-cli@v1.1.1
       with:
         files: README.md
         config_file: ".markdownlint.json"
+    - name: tests
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - run: npm test
