--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/upgundecha/howtheysre.git"
   },
   "author": "upgundecha",
-  "license": "ISC",
+  "license": "CC0 1.0 Universal",
   "bugs": {
     "url": "https://github.com/upgundecha/howtheysre/issues"
   },
