--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,6 +22,6 @@ jobs:
         node-version: '16.x'
     
     - name: Run Checklist
-      shell: 'script -q -e -c "bash {0}"'
-      run: npm ci && npx eslint test/. && npm run test
+      shell: 'cd test && script -q -e -c "bash {0}"'
+      run: npm ci && npx eslint . && npm run test
       
